--- a/notebooks/plots.py.ipynb
+++ b/notebooks/plots.py.ipynb
@@ -12,8 +12,8 @@
     "import pandas\n",
     "import seaborn\n",
     "\n",
-    "df = pandas.read_csv(\"distances.csv\")\n",
-    "df"
+    "node_df = pandas.read_csv(\"node_distances.csv.gz\")\n",
+    "node_df"
    ]
   },
   {
@@ -23,7 +23,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seaborn.boxplot(df, x='software', y='error', hue='software')"
+    "seaborn.boxplot(node_df, x='ranges', y='error', hue='software')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05289363-1b00-42a8-9ada-538136b521a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seaborn.lmplot(node_df, x=\"clade-size\", y=\"error\", hue=\"software\", col=\"ranges\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0a97a9b-b659-4a51-bf39-ffbabd04639f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seaborn.lmplot(node_df, x=\"dispersion\", y=\"error\", hue=\"software\", col=\"ranges\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2abe5cd1-11a8-42a7-9db3-d86e242be1ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seaborn.lmplot(node_df, x=\"extinction\", y=\"error\", hue=\"software\", col=\"ranges\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1e9ac40-d179-4df5-bc34-07afa62d648d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seaborn.lmplot(node_df, x=\"allopatry\", y=\"error\", hue=\"software\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57ae6c20-2cc8-476e-8584-2ab6d9fda250",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seaborn.lmplot(node_df, x=\"sympatry\", y=\"error\", hue=\"software\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dbb5c4f-0e07-4c75-b6d5-f357e9e04ec4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seaborn.lmplot(node_df, x=\"copy\", y=\"error\", hue=\"software\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2687301d-5a96-4ec2-a8cb-5bad25b50134",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gb = node_df.set_index(['tree-iter', 'bigrig-iter', 'software'])\n",
+    "gb.groupby(['software'])['error'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f38c2acf-40e3-4fdb-8f7d-1852bbe8140f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gb.groupby(['tree-iter', 'bigrig-iter', 'software'])['error'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d03a3f1-915e-4f09-acce-aa2c4c396b22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gb.groupby(['tree-iter', 'bigrig-iter','software'])['error'].median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c1b21cd-3fc3-4883-a7b0-fd7787534044",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seaborn.boxplot(node_df, x='ranges', y='time', hue='software')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "034dad8d-338a-4e43-b079-5f9de438b110",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_df.groupby(['software']).time.mean()"
    ]
   }
  ],
@@ -43,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
