--- a/notebooks/bigrig.r.ipynb
+++ b/notebooks/bigrig.r.ipynb
@@ -9,7 +9,9 @@
    "source": [
     "library('ggplot2')\n",
     "\n",
-    "options(repr.plot.width = 15, repr.plot.height =11) "
+    "options(repr.plot.width =15, repr.plot.height = 11) \n",
+    "\n",
+    "dir.create(\"figs\")"
    ]
   },
   {
@@ -37,13 +39,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggplot(data=df, aes(x=franges, y=time, fill=ftaxa)) + \n",
-    "    geom_boxplot(width=0.2) + \n",
+    "ggplot(data=df, aes(x=ftaxa, y=time, fill=franges)) + \n",
+    "    geom_boxplot(width=0.9) + \n",
     "    scale_color_brewer(palette=\"Pastel1\") + \n",
-    "    xlab(\"Range\") + \n",
-    "    ylab(\"Time\") +\n",
-    "    labs(fill = \"Taxa\") +\n",
-    "    theme_bw()"
+    "    xlab(\"Taxa\") + \n",
+    "    ylab(\"Time (s)\") +\n",
+    "    labs(fill = \"Range\") +\n",
+    "    scale_y_continuous(trans='log2', breaks = scales::pretty_breaks(7))+\n",
+    "    theme_bw() +\n",
+    "    theme(axis.text.x = element_text(angle = 45,  margin=margin(12,2,2,2,\"pt\")), axis.text.y = element_text(angle = 45))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f792d20-af99-4c3d-a702-ed60c5d22498",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ggsave(\"figs/bigrig.times.boxplot.svg\", width=15, height=11)"
    ]
   },
   {
@@ -59,7 +73,11 @@
     "    xlab(\"Taxa\") +\n",
     "    ylab(\"Time (s)\") +\n",
     "    labs(colour=\"Range\") + \n",
-    "    theme_bw()"
+    "    scale_y_continuous(trans='log2', breaks = scales::pretty_breaks(n = 7))+\n",
+    "    scale_x_continuous(trans='log2', breaks = unique(df$taxa))+\n",
+    "    guides(x = \"axis_logticks\", y = \"axis_logticks\") +\n",
+    "    theme_bw() +\n",
+    "    theme(axis.text.x = element_text(angle = 45,  margin=margin(12,2,2,2,\"pt\")), axis.text.y = element_text(angle = 45))"
    ]
   },
   {
@@ -68,7 +86,9 @@
    "id": "316016eb-0668-4221-bbcb-eabc864e73f3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ggsave(\"figs/bigrig.times.linreg.svg\", width=15, height=11)"
+   ]
   }
  ],
  "metadata": {
@@ -83,7 +103,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.4.2"
+   "version": "4.5.0"
   }
  },
  "nbformat": 4,
